[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/Comfy Feeling.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -27.0
margin_right = 72.0
margin_bottom = 51.0
color = Color( 0, 0, 0, 0.784314 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.507
anchor_right = 0.5
anchor_bottom = 0.507
margin_left = -244.0
margin_top = -268.5
margin_right = 244.0
margin_bottom = 268.5
custom_constants/separation = 50

[node name="Resume" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_right = 488.0
margin_bottom = 78.251
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_top = 128.0
margin_right = 488.0
margin_bottom = 206.251
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 1 )
text = "Restart"

[node name="Settings" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_top = 256.0
margin_right = 488.0
margin_bottom = 334.251
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer" groups=["Button"]]
margin_top = 384.0
margin_right = 488.0
margin_bottom = 462.251
mouse_default_cursor_shape = 1
custom_fonts/font = SubResource( 1 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
